# laba5b

./: CMakeLists.txt  main.c
libs/data_structures/: CMakeLists.txt
libs/data_structures/matrix/: matrix.c  matrix.h  solution.c
libs/data_structures/vector/: vector.c  vector.h
string/: string_.c  string_.h
string/tasks/: countWordsPalindromes.h  haveTheSameWords.h  puttingWordsInReverseOrder.h  removeAdjacentEqualLetters.h  removeNonLetters.h  replacingNumbersWithSpaces.h  string_.c  string_.h
